# Pioneer

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README copy.md  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_credentials.txt  test_server.py
.github/PULL_REQUEST_TEMPLATE/: feature_to_staging.md  staging_to_main.md
.github/workflows/: deploy.yml  monitoring.yml
backend/: requirements.txt
backend/app/: main.py
config/: alert.rules  prometheus.yml  settings.py
docs/: api_documentation.md  architecture.md  changelog.md  technical_documentation.md  troubleshooting_guide.md  user_guide.md
docs/architecture/: system_architecture.md
docs/communication/: data-transmission.md
docs/components/: log-collection.md  metrics-collection.md  network-monitoring.md  process-monitoring.md
docs/configuration/: configuration-files.md
docs/data-visualization/: correlation.md
docs/maintenance/: updates.md
frontend/: Dockerfile  nginx.conf  package.json
kubernetes/: cloudpioneer-daemonset.yaml
scripts/: configure.ps1  deploy.ps1  deploy.sh  generate_test_data.py  install.ps1  install.sh  install_agent.sh  install_command.txt  run_e2e_tests.sh
src/: App.js  __init__.py  main.py  package.json  server.js
terraform/: backend.tf  ecs.tf  iam_ecs.tf  main.tf  monitoring.tf  outputs.tf  variables.tf
terraform-temp/: api_gateway.tf  cognito.tf  dynamodb.tf  main.tf  outputs.tf  s3.tf  variables.tf
tests/: __init__.py  conftest.py  end_to_end_test.py  test_agent.py  test_main.py
(+136 files in other folders)
