[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-pioneer"
version = "0.1.0"
description = "Cloud resource monitoring and optimization tool"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-dotenv==1.0.0",
    "boto3>=1.29.3",
    "botocore==1.34.14",
    "pydantic>=2.5.1",
    "pydantic-settings==2.1.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "kafka-python==2.0.2"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.1"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --import-mode=importlib"
testpaths = ["tests"]
asyncio_mode = "strict"
pythonpath = ["."]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::RuntimeWarning"
]
